--- a/code/style.css
+++ b/code/style.css
@@ -8,12 +8,11 @@
 
 body {
 	font-family: "Montserrat", sans-serif;
-	letter-spacing: -0.015em;
 }
 
 section {
 	padding: 48px 6.4vw;
-	/* margin: auto; */
+	margin: auto;
 }
 
 .summery-section,
@@ -22,15 +21,6 @@ section {
 .skills-section {
 	background: #f4f4f4;
 }
-
-/* .tech-section,
-.featured-projects,
-.more-projects,
-.reflect-section,
-.reflect-section,
-.sub-reflect-section {
-	margin: auto;
-} */
 
 /********* Text Styles *********/
 
@@ -70,6 +60,32 @@ section {
 	display: inline;
 	text-transform: uppercase;
 	color: #ffffff;
+	padding: 1px 7px;
+	text-align: center;
+}
+
+.colored {
+	color: #fa382f;
+}
+
+.line {
+	border: 1px solid #fa382f;
+	width: 40px;
+	display: inline-block;
+	margin-bottom: 4px;
+}
+
+.dot {
+	height: 10px;
+	width: 10px;
+	background-color: #fa382f;
+	border-radius: 50%;
+	display: inline-block;
+	margin-right: 12px;
+}
+
+.center {
+	text-align: center;
 }
 
 /********* Top Section *********/
@@ -117,28 +133,19 @@ header {
 
 /********* Summery Section *********/
 
-.line {
-	border: 1px solid #fa382f;
-	width: 40px;
-	display: inline-block;
-	margin-bottom: 4px;
-}
+/********* Tech Section *********/
 
-.dot {
-	height: 10px;
-	width: 10px;
-	background-color: #fa382f;
-	border-radius: 50%;
-	display: inline-block;
-	margin-right: 12px;
-}
+/********* Featured Projects *********/
 
 /********* Media Queries *********/
 
 /* Big tablet */
 @media (min-width: 769px) {
-	.wrapper {
-		padding: 0px 10vw;
+	section {
+		padding: 48px 10vw;
+	}
+	.top-icons-container {
+		margin-right: 10vw;
 	}
 	.top-icons {
 		width: 80px;
@@ -147,7 +154,10 @@ header {
 
 /* Small desktop */
 @media (min-width: 923px) {
-	.wrapper {
-		padding: 0px 21vw;
+	section {
+		padding: 48px 21vw;
+	}
+	.top-icons-container {
+		margin-right: 21vw;
 	}
 }
