styling and some structuring

--- a/code/style.css
+++ b/code/style.css
@@ -8,17 +8,18 @@
 
 body {
 	font-family: "Montserrat", sans-serif;
+	font-size: 17px;
+	font-weight: 400;
+	line-height: 29px;
 }
 
-section {
+.container {
 	padding: 48px 6.4vw;
+	margin: auto;
 }
 
-.summery-section,
-.featured-projects,
-.more-projects,
-.skills-section {
-	background: #f4f4f4;
+.container:nth-child(2n) {
+	background-color: #f4f4f4;
 }
 
 /********* Text Styles *********/
@@ -33,10 +34,6 @@ section {
 	color: #ffffff;
 }
 
-.bold {
-	font-weight: 700;
-}
-
 .big-heading {
 	font-size: 40px;
 	line-height: 49px;
@@ -45,28 +42,71 @@ section {
 	margin-top: 5px;
 }
 
-.intro-text {
-	font-weight: 400;
-	font-size: 17px;
-	line-height: 29px;
+.text-container {
+	font-family: "Roboto", sans-serif;
+	margin-bottom: 8px;
 }
 
-.section-headings {
+.section-heading {
 	font-size: 22px;
-	line-height: 26.82px;
 	font-weight: 700;
-	text-transform: uppercase;
 	color: #ffffff;
 	text-align: center;
 	margin-bottom: 30px;
 }
 
-.colored {
+.sub-heading {
+	font-size: 21px;
+	font-weight: 700;
+	text-align: center;
+	margin: 60px 0 48px 0;
+}
+
+.sub-project .project-title {
+	margin-top: 40px;
+}
+
+.tag-wrapper {
+	display: flex;
+}
+
+.tag-wrapper p {
+	font-family: "Roboto", sans-serif;
+	font-weight: 400;
+	background-color: #fddfe7;
+	font-size: 11px;
+	line-height: 11px;
+	padding: 6px 8px;
+	margin-right: 8px;
+	border-radius: 3px;
+}
+
+.tech-info span {
 	color: #fa382f;
 }
 
-.colored-bg {
-	background: #fa382f;
+.date-text {
+	color: #fa382f;
+	text-transform: uppercase;
+}
+
+.contact-info,
+.tech-info {
+	text-align: center;
+}
+
+.project-title,
+.image-title,
+.more-projects .sub-heading,
+.sub-reflections .sub-heading,
+.skills-sub-heading {
+	color: #fa382f;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+
+.section-heading span {
+	background-color: #fa382f;
 	text-transform: uppercase;
 	padding: 1px 7px;
 	text-align: center;
@@ -86,10 +126,6 @@ section {
 	border-radius: 50%;
 	display: inline-block;
 	margin-right: 12px;
-}
-
-.center {
-	text-align: center;
 }
 
 /********* Top Section *********/
@@ -145,7 +181,7 @@ header {
 .reflection-wrapper {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
-	gap: 20px;
+	gap: 30px;
 }
 
 .main-project,
@@ -171,20 +207,28 @@ header {
 	width: 100%;
 	height: 61vw;
 	object-fit: cover;
+	margin-bottom: 18px;
 }
 
 /********* Projects *********/
 
+/* here */
 .featured-projects a,
-.more-projects a {
+/* .more-projects a, */
+.text-container a {
 	text-decoration: none;
+	color: #000000;
 }
 
 /********* Footer *********/
 
 .contact {
-	background: #072bce;
+	background-color: #072bce;
 	color: #ffffff;
+}
+
+.contact-info {
+	margin-bottom: 48px;
 }
 
 /********* Media Queries *********/
