--- a/code/style.css
+++ b/code/style.css
@@ -34,6 +34,10 @@ body {
 	color: #ffffff;
 }
 
+.name {
+	font-weight: 700;
+}
+
 .big-heading {
 	font-size: 40px;
 	line-height: 49px;
@@ -62,6 +66,13 @@ body {
 	margin: 60px 0 48px 0;
 }
 
+.reflect-title {
+	font-size: 21px;
+	font-weight: 700;
+	line-height: 30px;
+	/* margin: 60px 0 48px 0; */
+}
+
 .sub-project .project-title {
 	margin-top: 40px;
 }
@@ -72,7 +83,6 @@ body {
 
 .tag-wrapper p {
 	font-family: "Roboto", sans-serif;
-	font-weight: 400;
 	background-color: #fddfe7;
 	font-size: 11px;
 	line-height: 11px;
@@ -85,9 +95,16 @@ body {
 	color: #fa382f;
 }
 
+.more-thoughts-link {
+	font-family: "Roboto", sans-serif;
+	color: #000000;
+	font-weight: 700;
+}
+
 .date-text {
 	color: #fa382f;
 	text-transform: uppercase;
+	font-weight: 400;
 }
 
 .contact-info,
