--- a/code/style.css
+++ b/code/style.css
@@ -209,7 +209,7 @@ header {
 .reflection-wrapper {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
-	gap: 30px;
+	gap: 40px;
 }
 
 .main-project,
@@ -233,7 +233,7 @@ header {
 .project-image,
 .reflect-image {
 	width: 100%;
-	height: 61vw;
+	height: 52.32vw;
 	object-fit: cover;
 	margin-bottom: 18px;
 }
@@ -277,7 +277,7 @@ header {
 
 /* Big tablet */
 @media (min-width: 769px) {
-	section {
+	.container {
 		padding: 48px 10vw;
 	}
 	.top-icons-container {
@@ -286,11 +286,15 @@ header {
 	.top-icons {
 		width: 80px;
 	}
+	.project-image,
+	.reflect-image {
+		height: 48vw;
+	}
 }
 
 /* Small desktop */
 @media (min-width: 923px) {
-	section {
+	.container {
 		padding: 48px 21vw;
 	}
 	.top-icons-container {
@@ -303,5 +307,9 @@ header {
 	.project-image,
 	.reflect-image {
 		height: 20vw;
+	}
+	.project-image,
+	.reflect-image {
+		height: 34.8vw;
 	}
 }
