--- a/code/style.css
+++ b/code/style.css
@@ -245,6 +245,15 @@ header {
 
 /********* Skills Section *********/
 
+.skills-wrapper {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	justify-content: space-between;
+	/* justify-content: space-evenly; */
+	/* justify-content: space-around; */
+}
+
 /********* Social Media Section *********/
 
 .social-links {
