--- a/code/style.css
+++ b/code/style.css
@@ -49,13 +49,13 @@ body {
 	font-weight: 300;
 	letter-spacing: 0.05em;
 	color: #ffffff;
+	line-height: 34px;
 }
 
 .big-heading {
 	font-size: 46px;
 	line-height: 56px;
 	color: #ffffff;
-	margin-top: 5px;
 }
 
 .section-heading,
@@ -77,7 +77,7 @@ body {
 .sub-heading {
 	font-size: 20px;
 	text-align: center;
-	line-height: 21px;
+	line-height: 20px;
 	margin: 60px 0 30px 0;
 }
 
@@ -283,7 +283,7 @@ header {
 /* Small tablet */
 @media (min-width: 768px) {
 	.container {
-		padding: 48px 10vw;
+		padding: 84px 10vw;
 	}
 	.top-icons-container {
 		margin-right: 10vw;
@@ -291,25 +291,71 @@ header {
 	.skills-wrapper {
 		justify-content: space-evenly;
 	}
+	.top-text-container {
+		width: 50%;
+	}
+	.bottom-icons {
+		width: 80px;
+	}
+	.skills-wrapper .text-container {
+		width: 33%;
+	}
+	.social-links {
+		text-decoration: none;
+		font-size: 12px;
+		width: 20%;
+	}
 }
 
 /* Big tablet */
 @media (min-width: 992px) {
 	.top-icons {
-		width: 60px;
+		width: 50px;
+		margin-left: 10px;
+	}
+	.container {
+		padding: 120px 10vw;
 	}
 	.project-wrapper,
 	.reflection-wrapper {
 		grid-template-columns: repeat(8, 1fr);
+	}
+	.top-text-container {
+		width: 40%;
+	}
+	.bottom-icons {
+		width: 100px;
+	}
+	.section-heading {
+		font-size: 30px; /* tidigare 22*/
+		margin-bottom: 40px; /* x1,36 tidigare 30 */
+	}
+	.sub-heading {
+		font-size: 25px; /*tidigare 20*/
+		line-height: 25px; /*tidigare 20*/
+		margin: 80px 0 30px 0; /* x3 0 x1,5 0*/
+	}
+	.skill-title {
+		font-size: 16px;
+		margin-top: 8px;
 	}
 }
 
 /* Bigger Desktop */
 @media (min-width: 1200px) {
 	.container {
-		padding: 48px 21vw;
+		padding: 120px 21vw;
 	}
 	.top-icons-container {
 		margin-right: 21vw;
+	}
+	.big-heading {
+		font-size: 58px;
+		line-height: 76px;
+		color: #ffffff;
+		margin-top: 5px;
+	}
+	.top-text-container {
+		width: 45%;
 	}
 }
