--- a/code/style.css
+++ b/code/style.css
@@ -326,20 +326,17 @@ header {
 	.reflection-wrapper {
 		grid-template-columns: repeat(8, 1fr);
 	}
-	.big-heading {
-		width: 40%;
-	}
 	.bottom-icons {
 		width: 100px;
 	}
 	.section-heading {
-		font-size: 30px; /* tidigare 22*/
-		margin-bottom: 40px; /* x1,36 tidigare 30 */
+		font-size: 30px;
+		margin-bottom: 40px;
 	}
 	.sub-heading {
-		font-size: 25px; /*tidigare 20*/
-		line-height: 25px; /*tidigare 20*/
-		margin: 80px 0 30px 0; /* x3 0 x1,5 0*/
+		font-size: 25px;
+		line-height: 25px;
+		margin: 80px 0 30px 0;
 	}
 	.skill-title {
 		font-size: 16px;
@@ -355,6 +352,7 @@ header {
 		line-height: 76px;
 		color: #ffffff;
 		margin-top: 5px;
+		width: 40%;
 	}
 }
 
@@ -373,9 +371,6 @@ header {
 		color: #ffffff;
 		margin-top: 5px;
 	}
-	.big-heading {
-		width: 45%;
-	}
 	.intro-text,
 	.tech-info {
 		font-size: 22px;
@@ -386,5 +381,6 @@ header {
 		line-height: 85px;
 		color: #ffffff;
 		margin-top: 5px;
+		width: 45%;
 	}
 }
