--- a/code/style.css
+++ b/code/style.css
@@ -252,6 +252,25 @@ header {
 	width: 100%;
 }
 
+.overlay {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background: rgba(0, 0, 0, 0.6);
+	opacity: 0;
+	transition: 0.5s ease;
+}
+
+.main-project:hover .overlay {
+	opacity: 1;
+}
+
+/* .reflect-section {
+	display: none;
+} */
+
 /********* Skills Section *********/
 
 .skills-wrapper {
